--- a/app/src/styles/Home.css
+++ b/app/src/styles/Home.css
@@ -87,5 +87,6 @@
   overflow: hidden;
   align-items: flex-start;
   position: relative;
-  z-index: 1;
+  z-index: 2;
+  background: var(--bg);
 }
